--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 flake8 = "^3.8.4"
 black = "^20.8b1"
+rope = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 
